--- a/client/mb_website/src/FirstSection.css
+++ b/client/mb_website/src/FirstSection.css
@@ -7,6 +7,7 @@
     height: 100vh;           /* Full viewport height */
     width: 100vw;            /* Full viewport width */
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
@@ -32,20 +33,58 @@
     margin: 0 0 20px;
 }
 
-.cta-button {
-    background-color: #007bff;
+.contact-button-container {
+    position: absolute;
+    bottom: 20px; /* Adjust this value to move the contact button up or down */
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 2;
+}
+
+.contact-button {
+    background-color: #121213;
     color: white;
-    padding: 15px 30px;
-    text-decoration: none;
+    padding: 15px 20px;
+    border: none;
     border-radius: 5px;
-    transition: background-color 0.3s;
-    font-size: 1.2rem;
+    font-size: 16px;
+    cursor: pointer;
+    text-decoration: none;
 }
 
-.cta-button:hover {
-    background-color: #0056b3;
+.contact-button:hover {
+    background-color: #adadb0;
 }
 
+.contact-link {
+    text-decoration: none;
+    color: white;
+}
+
+.contact-link:hover {
+    color: white;
+}
+
+.contact-component-container {
+    position: absolute;
+    bottom: 90px; /* Adjust this value to move the contact component up or down */
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 2;
+    width: 100%; /* Ensure the contact component container takes full width */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+footer {
+    background-color: #f1f1f1;
+    color: #333;
+    padding: 10px 20px;
+    text-align: center;
+}
+
+/* Responsive styles */
 @media (max-width: 768px) {
     .first-section {
         height: 70vh;         /* Adjust height for mobile devices */
@@ -59,8 +98,21 @@
         font-size: 1.2rem;
     }
 
-    .cta-button {
+    .contact-button {
         padding: 10px 20px;
         font-size: 1rem;
+    }
+}
+
+@media (max-width: 600px) {
+    main {
+        padding: 10px;
+    }
+
+    .contact-button {
+        padding: 10px 20px; /* Increase padding */
+        font-size: 16px;    /* Adjust font size */
+        width: auto;        /* Ensure width adjusts to the content */
+        white-space: nowrap; /* Prevent text from wrapping */
     }
 }
