--- a/client/mb_website/src/Navbar.css
+++ b/client/mb_website/src/Navbar.css
@@ -1,88 +1,95 @@
-/* src/Navbar.css */
 body {
     margin: 0;
     font-family: Arial, sans-serif;
 }
 
-.navbar {
+.custom-navbar {
     background-color: #333;
     overflow: hidden;
+}
+
+.custom-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 0 20px;
 }
 
-.navbar-brand a {
+.custom-brand {
     color: white;
-    padding: 14px 20px;
     text-decoration: none;
-    display: inline-block;
-}
-
-.navbar-menu {
-    list-style: none;
-    margin: 0;
-    padding: 0;
     display: flex;
-    flex-direction: row;
+    align-items: center;
+    margin-right: 0; /* Ensure the brand is on the right edge */
 }
 
-.navbar-menu li a {
+.navbar-logo {
+    height: 40px; /* Adjust the height as needed */
+    width: auto;
+}
+
+.custom-nav {
+    display: flex;
+    flex-direction: row-reverse; /* Ensure the nav items are ordered from right to left */
+    margin-left: auto; /* Push the nav items to the right */
+}
+
+.navbar-nav .nav-link {
     color: white;
     padding: 14px 20px;
     text-decoration: none;
     display: block;
 }
 
-.navbar-menu li a:hover {
+.navbar-nav .nav-link:hover {
     background-color: #575757;
 }
 
-.navbar-toggle {
-    display: none;
+.custom-toggler {
     background-color: #333;
     border: none;
     color: white;
     padding: 14px 20px;
     font-size: 18px;
     cursor: pointer;
+    display: block; /* Ensure toggler is visible */
+}
+
+.navbar-nav .nav-link .fa-whatsapp {
+    color: #25D366; /* WhatsApp green color */
+    font-size: 24px; /* Adjust the size as needed */
 }
 
 @media (max-width: 768px) {
-    .navbar-menu {
-        display: none;
-        flex-direction: column;
-        width: 100%;
-    }
-    .navbar-menu li a {
-        color: white;
-        padding: 14px 20px;
-        text-decoration: none;
-        display: block;
-    }
-    
-    .navbar-menu.open {
-        display: flex;
-    }
-
-    .navbar-toggle {
-        display: block;
-    }
-
-    .navbar {
-        flex-direction: column;
-        align-items: flex-start;
-    }
-
-    .navbar-brand {
-        width: 100%;
-        display: flex;
+    .custom-container {
+        flex-direction: row;
         justify-content: space-between;
         align-items: center;
     }
 
-    .navbar-brand a {
-        padding: 14px;
+    .custom-nav {
+        display: none;
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .custom-nav.open {
+        display: flex;
+    }
+
+    .custom-navbar {
+        flex-direction: column;
+        align-items: flex-start;
+    }
+
+    .custom-brand {
+        order: 2; /* Ensure the brand appears after the toggler */
+        width: auto;
+        margin: 0;
+    }
+
+    .custom-toggler {
+        order: 1; /* Ensure the toggler is on the right in mobile mode */
+        margin-left: auto; /* Push toggler to the right */
     }
 }
